Fixed awkward spacing and gaps. Fixed button width. Fixed navigation bar responsiveness. (Help from Janet)

--- a/css/events.css
+++ b/css/events.css
@@ -123,7 +123,7 @@
   background-color: rgba(0,0,0,0);
 }*/
 
-.buttons {
+.buttonsevent {
   margin: 0 auto;
   width:15%;
   height:4rem;
