--- a/css/merch.css
+++ b/css/merch.css
@@ -102,6 +102,7 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     margin-top:-2.1rem;
     text-transform: uppercase;
+    z-index:1;
 }
 
 /* Links inside the dropdown */
