--- a/css/responsive.css
+++ b/css/responsive.css
@@ -229,6 +229,12 @@
     height:13rem;
   }
 
+  /*eventpage*/
+
+  .buttonsevent {
+    width:30%;
+  }
+
   /*wallet page*/
 
   .productlistingmain{
@@ -266,6 +272,16 @@
     top:250px;
   }
 
+  /*login and myaccount page*/
+
+  h1.h1login{
+    margin-top:10rem;
+  }
+
+  .reviewform.loginreview {
+    margin-top:2rem;
+  }
+
 }
 
 @media (max-width:414px){
@@ -276,6 +292,12 @@
 
   .filter{
     margin-bottom:-3rem;
+  }
+
+  /*merch page*/
+
+  .buttonsevent {
+    width:50%;
   }
 
   /*wallet page*/
